syntax = "proto3";
package go_app.v1;

import "options/gorm.proto";
import "google/protobuf/timestamp.proto";
import "go_app/v1/enums.proto";
import "google/protobuf/struct.proto";
option (gorm.file_opts) = {generate: true};


message Hello {
  option (gorm.opts) = {ormable: true};
  // @gotags: fake:"skip"
  optional string id = 1 [json_name = "id"];
  // @gotags: fake:"skip"
  google.protobuf.Timestamp created_at = 2 [json_name = "created_at"];
  // @gotags: fake:"skip"
  google.protobuf.Timestamp updated_at = 3 [json_name = "updated_at"];
  // @gotags: fake:"{number:1,1}"
  HelloType hello_type = 4 [json_name = "hello_type"];
  // @gotags: fake:"{beername}"
  optional string person_name = 5 [json_name = "person_name"];
}

message Todo {
  option (gorm.opts) = {ormable: true};
  // @gotags: fake:"skip"
  optional string id = 1 [json_name = "id"];
  // @gotags: fake:"{number:1,1}"
  TodoType todo_type = 2 [json_name = "todo_type"];
  // @gotags: fake:"{hipsterword}"
  optional string todo_name = 3 [json_name = "todo_name"];
  // @gotags: fake:"{number:1,3}"
  int32 priority = 4 [json_name = "priority"];
  // @gotags: fake:"skip"
  bool completed = 5 [json_name = "completed"];
}
